== Version 1.1.4 (trunk)

* Applied patch from Ian White to get rspec working with edge rails (8804). Closes #271.

== Version 1.1.3

Maintenance release.
Notice to autotest users: you must also upgrade to ZenTest-3.9.0.

* Tightened up exceptions list in autotest/rails_spec. Closes #264.
* Applied patch from Ryan Davis for ZenTest-3.9.0 compatibility
* Applied patch from Kero to add step_upcoming to story listeners. Closes #253.
* Fixed bug where the wrong named error was not always caught by "should raise_error"
* Applied patch from Luis Lavena: No coloured output on Windows due missing RUBYOPT. Closes #244.
* Applied patch from Craig Demyanovich to add support for "should_not render_template" to rspec_on_rails. Closes #241.
* Added --pattern (-p for short) option to control what files get loaded. Defaults to '**/*_spec.rb'
* Exit with non-0 exit code if examples *or tests* (in test/unit interop mode) fail. Closes #203.
* Moved at_exit hook to a method in Spec::Runner which only runs if specs get loaded. Closes #242.
* Applied patch from kakutani ensuring that base_view_path gets cleared after each view example. Closes #235.
* More tweaks to regexp step names
* Fixed focused specs in nested ExampleGroups. Closes #225.

== Version 1.1.2

Minor bug fixes/enhancements.
Notice to autotest users: you must also upgrade to ZenTest-3.8.0.

* RSpec's Autotest subclasses compatible with ZenTest-3.8.0 (thanks to Ryan Davis for making it easier on Autotest subs).
* Applied patch from idl to add spec/lib to rake stats. Closes #226.
* calling setup_fixtures and teardown_fixtures for Rails >= r8570. Closes #219.
* Applied patch from Josh Knowles using ActiveSupport's Inflector (when available) to make 'should have' read a bit better. Closes #197.
* Fixed regression in 1.1 that caused failing examples to fail to generate their own names. Closes #209.
* Applied doc patch from Jens Krämer for capturing content_for